<resources>
    <string name="app_name">aotosize</string>
    <string name="welcome_to_safe_desk">欢迎使用安全桌面</string>
    <string name="user_register_login">注册登录</string>
    <string name="register">注册</string>
    <string name="title_permission_cfg">权限配置</string>
    <string name="title_permission">权限</string>
    <string name="title_permission_usage_stats">开启应用查看权限</string>
    <string name="title_permission_device">激活设备管理器</string>
    <string name="title_run_on_app">显示在其他应用上层</string>
    <string name="title_accessibility">辅助功能</string>
    <string name="title_device_admin">设备管理器</string>
    <string name="emm_accessibility">安全桌面无障碍服务</string>
    <string name="title_bar">Mobile@Work</string>
    <string name="setting">设置</string>
    <string name="skip">跳过</string>
    <string name="device_des">取消安全桌面移动设备管理，会导致设备屏幕锁定，如需要操作，请与管理员联系，获取锁屏密码。</string>
    <string name="auto_service_des">为了授权安全桌面插件帮您简化安全桌面的操作，需要开启右上角开关启动EMM-SECURE访问服务。</string>
    <string name="device_dialog">取消安全桌面设备激活，会导致安全桌面功能不能正常使用。</string>
    <string name="device">安全桌面</string>
    <string name="read_pictrue">导入二维码</string>
    <string name="scan_pictrue">扫描二维码</string>
    <string name="registerint">正在注册，请稍等</string>
    <string name="check_update">检查更新</string>
    <string name="about">关于我们</string>
    <string name="title_client_unistall">客户端卸载</string>
    <string name="delay_lockscreen">延迟锁屏</string>
    <string name="configure">配置</string>
    <string name="power_by">POWERED BY</string>
    <string name="more_infor">有关更多信息，请访问：</string>
    <string name="more_infor_url">www.aixunyun.com</string>
    <string name="register_explain">     请从相册中选择之前在网页中保存的二维码图片导入到本应用，然后应用会自动向服务器为您注册。</string>
    <string name="register_title"></string>
    <string name="status_load_doing">下载中</string>
    <string name="status_load">下载</string>
    <string name="status_load_finish">已下载</string>
    <string name="status_continue">继续</string>
    <string name="status_pause">暂停</string>
    <string name="status_install">安装</string>
    <string name="status_update">更新</string>
    <string name="status_installed">打开</string>
    <string name="status_finish">完成</string>
    <string name="status_fail">下载失败</string>
    <string name="status_uninstall">卸载</string>
    <string name="is_load">是否下载</string>
    <string name="is_cancel_load">是否取消下载?</string>
    <string name="cancels">取消</string>
    <string name="re_yes">重试</string>
    <string name="yes">确定</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="version_update" translatable="false">检查更新</string>
    <string name="download_emmstore" translatable="false">下载EMMStore</string>
    <string name="one_click_delete">一键删除</string>
    <string name="back">返回</string>
    <string name="notice">消息通知</string>
    <string name="document">文档内容</string>
    <string name="delete">删除</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_finish">已无更多</string>
    <string name="wait">正在加载，请稍后</string>
    <string name="current_state_wifi">"当前状态："</string>
    <string name="current_state_google_account">"当前状态："</string>
    <string name="current_state_screen_capture">"当前状态："</string>
    <string name="state_restricted">已禁用</string>
    <string name="state_nomal">未禁用</string>
    <string name="disable_wifi">禁用WiFi</string>
    <string name="enable_wifi">启用WiFi</string>
    <string name="disable_google_account">禁用谷歌账号</string>
    <string name="enable_google_account">启用谷歌账号</string>
    <string name="enable_screen_capture">启用截屏</string>
    <string name="disable_screen_capture">禁用截屏</string>
    <string name="enable_data_conn">启用数据连接</string>
    <string name="state_not_actived">该应用未激活</string>
    <string name="accept_btn">同意</string>
    <string name="exit_btn">退出</string>
    <string name="disable_warning">取消激活后将导致本软件的部分功能无法正常工作，您确定要取消激活么？</string>
    <string name="know">已阅读</string>
    <string name="not_show_anymore">不再提示</string>
    <string name="title_license">免责声明与软件许可协议</string>
    <string name="title_permissions">华为设备权限使用声明</string>
    <string name="read_statement">若您点击同意并开始使用本软件，代表您已阅读并接受<a href="http://www.huawei.mdm.com">《免责声明与软件许可协议》</a>。</string>
    <string name="version">1.2</string>
    <string name="no_media_warning">Storage Media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="open_failed">无法打开文档</string>
    <string name="content_failure">%1$s: %2$s</string>
    <string name="cancel">取消</string>
    <string name="search_backwards">向后</string>
    <string name="search_forwards">向前</string>
    <string name="search_document">搜索文档</string>
    <string name="picker_title">%1$s %2$s: %3$s</string>
    <string name="outline_title">Table of Contents</string>
    <string name="enter_password">Enter PaaccountActivatingaccountActivatingaccountActivatingaccountActivatingaccountActivatingaccountActivatingaccountActivatingaccountActivatingaccountActivatingaccountActivatingaccountActivatingaccountActivatingaccountActivatingaccountActivatingssword</string>
    <string name="text_not_found">未找到相应文字</string>
    <string name="searching_">正在查找...</string>
    <string name="link_control">Link highlighting and enabling</string>
    <string name="no_further_occurences_found">No further occurences found</string>
    <string name="select">选择</string>
    <string name="search">搜索</string>
    <string name="copy">复制</string>
    <string name="strike_out">Strike out</string>
    <string name="tab_sd">SD内存卡</string>
    <string name="sure">确定</string>
    <string name="wrong_password">密码错误</string>
    <string name="login_password_lock">输入密码以进入主界面，按取消退出程序</string>
    <string name="login_password_lock_hint">请输入密码</string>
    <string name="dataEncrypted">您不能从受保护的应用中取出数据</string>
    <string name="removeItem">Remove</string>
    <string name="app_manager">应用管理</string>
    <string name="policy_info">策略详情</string>
    <string name="black_white">黑白名单策略</string>
    <string name="file_manager">文档管理</string>
    <string name="appstore">应用商店</string>
    <string name="safe_browser">安全浏览器</string>
    <string name="content_manager">内容管理</string>
    <string name="app_permisstion">应用权限</string>
    <string name="black_app">黑名单</string>
    <string name="device_info">设备信息</string>
    <string name="sys_setting">个人设置</string>
    <string name="wallpaper_setting">更换壁纸</string>
    <string name="device_name">设备名称</string>
    <string name="storage">存储</string>
    <string name="details">详情</string>
    <string name="state_info">状态信息</string>
    <string name="sim">SIM卡信息</string>
    <string name="strategy_manager">安全策略</string>
    <string name="invalid_strategy">合规策略</string>
    <string name="black_list">黑名单</string>
    <string name="white_list">白名单</string>
    <string name="app_strategy">应用策略</string>
    <string name="wifi_strategy">WIFI配置</string>
    <string name="device_track">设备轨迹</string>
    <string name="system_limit">功能限制</string>
    <string name="system_command">系统命令</string>
    <string name="location_strategy">定位配置</string>
    <string name="app_bw">应用黑白名单</string>
    <string name="wifi_bw">WIFI黑白名单</string>
    <string name="btooth_bw">蓝牙黑白名单</string>
    <string name="netApp_w">网络应用白名单</string>
    <string name="call_bw">通话黑白名单</string>
    <string name="netAccess_bw">网络访问黑白名单</string>
    <string name="Geofence">地理围栏</string>
    <string name="appCommand">应用命令</string>
    <string name="secreteStrategy">密码配置</string>
    <string name="server_address">服务地址</string>
    <string name="default_versionname">V0.0.1</string>
    <string name="network_error">网络异常，请稍后重试</string>
    <string name="imgdescribe">imgdescribe</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="username_head">用户名:</string>
    <string name="password_head">密码:</string>
    <string name="login">用户登录</string>
    <string name="islogining">正在登陆</string>
    <string name="frogetpwd">忘记密码 ?</string>
    <string name="remenberusername">记住用户名</string>
    <string name="download">下载</string>
    <string name="updata">更新</string>
    <string name="username_null_warning">用户名为空</string>
    <string name="password_null_warning">密码为空</string>
    <string name="safe_desk">安全桌面</string>
    <string name="all_app">所有应用</string>
    <string name="manager">管理</string>
    <string name="enableupdata">可更新</string>
    <string name="nuish">卸载</string>
    <string name="avalidspace">剩余空间：</string>
    <string name="phone">手机：</string>
    <string name="storagecard">存储卡：</string>
    <string name="comgratulation_noapp_update">恭喜，没有应用需要更新哦！</string>
    <string name="checkupdata">检查更新</string>
    <string name="aboutus">关于我们</string>
    <string name="help">帮助</string>
    <string name="downloadset">下载和流量设置</string>
    <string name="feedback">意见反馈</string>
    <string name="logonout">退出商城</string>
    <string name="email">邮箱</string>
    <string name="yourdout">你的宝贵意见是我们前进的动力，谢谢！</string>
    <string name="emailhint">请填写正确的邮箱地址，我们联系你哦</string>
    <string name="douthint">请填写你的意见（300字以内）</string>
    <string name="appdetail">应用详情</string>
    <string name="appname">安全桌面应用商城</string>
    <string name="company_owners">上海上讯信息技术股份有限公司 版权所有</string>
    <string name="copyright">Copyright @  Suninfo All Rights Reseved</string>
    <string name="phoneemail">手机号/邮箱</string>
    <string name="code">验证码</string>
    <string name="sendcode">发送验证码</string>
    <string name="reinputnewpwd">请输入新密码</string>
    <string name="resetpwd">重置密码</string>
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="please_input_old_gesture_pwd">请输入原来的手势密码</string>
    <string name="please_input_gesture_pwd">请输入手势密码</string>
    <string name="set_gesture_pattern">请输入新6~9位手势密码</string>
    <string name="please_input_gesture_pwd_agin">再次输入手势密码</string>
    <string name="safemanager_login_cert">登录认证</string>
    <string name="error_please_input_again">密码错误，请重新输入</string>
    <string name="gesture_login_more_way">更多</string>
    <string name="origin_login_">注册密码登录</string>
    <string name="please_input_6_numberpwd">请输入6位数字密码</string>
    <string name="please_input_old6_numberpwd">请输入原来6位数字密码</string>
    <string name="please_input_new6_numberpwd">请输入新的6位数字密码</string>
    <string name="please_input_agin6_numberpwd">再次输入数字密码</string>
    <string name="mobile_safe_keybord">安全桌面专属键盘</string>
    <string name="set_digital_pwd">设置数字密码</string>
    <string name="pwd_set">密码设置</string>
    <string name="permission_set">权限设置</string>
    <string name="online_time_set">在线时长</string>
    <string name="use_digital_pwd">数字密码</string>
    <string name="use_image_pwd">手势密码</string>
    <string name="location_permission">定位权限</string>
    <string name="app_permission">应用权限</string>
    <string name="applay">使用</string>
    <string name="online_time_0">不限制</string>
    <string name="online_time_1">30分钟</string>
    <string name="online_time_2">60分钟</string>
    <string name="application_name">Launcher3</string>
    <string name="home">Home</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name"></string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <plurals name="number_of_items_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <string name="wallpaper_accessibility_name">Wallpaper %1$d of %2$d</string>
    <string name="announce_selection">Selected </string>
</resources>